[package]
name = "rust_native_cardano"
version = "0.1.0"
authors = ["vincent.hanquez@iohk.io"]
license = "MIT"
description = "Exporting to wasm the cardano wallet"
keywords = [ "Cardano", "Wallet", "React Native" ]

[build-dependencies]

[dependencies]
wallet-wasm = { git = "https://github.com/input-output-hk/js-cardano-wasm.git" }
cardano = { git = "https://github.com/input-output-hk/js-cardano-wasm.git" }

[target.'cfg(target_os="android")'.dependencies]
jni = "0.10.2"

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
debug = false
opt-level = 's'

[target.'cfg(target_os="ios")']
lto = false
